# vortexpy

./: LICENSE  README.md  pyproject.toml
examples/: fibonacci.py  mandelbrot.py  matmul.py  primes.py  sum_squares.py  types.py
tests/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
vortex/: __init__.py  benchmark_suite.py  cli.py  codegen.py  optimizer.py  parser.py
