[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vortexpy"
version = "1.0.0"
description = "VortexPy, A high-performance Python AOT compiler powered by LLVM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Azzy Novais"},
]
keywords = ["compiler", "python", "llvm", "aot", "native", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: System :: Hardware :: Symmetric Multi-processing",
]
dependencies = [
    "llvmlite>=0.42.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
vortex = "vortex.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[tool.setuptools.packages.find]
include = ["vortex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
